<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_filters"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        style="@style/FilterSettingsRow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/FilterSettingsText"
            android:id="@+id/tvBeginDate"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"/>

        <EditText
            android:id="@+id/etBeginDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </LinearLayout>

    <LinearLayout
        style="@style/FilterSettingsRow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/FilterSettingsText"
            android:id="@+id/tvSortOrder"
            android:layout_height="wrap_content"
            android:text="@string/sort_order"/>

        <Spinner
            android:id="@+id/spinnerSortOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sort_order_array"/>

    </LinearLayout>

    <LinearLayout
        style="@style/FilterSettingsRow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/FilterSettingsText"
            android:id="@+id/tvNewsDesk"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_values"/>

        <LinearLayout
            android:id="@+id/llNewsDesk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts"/>

            <CheckBox
                android:id="@+id/cbFashionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_style"/>

            <CheckBox
                android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/FilterSettingsRow"
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center_horizontal" />

</LinearLayout>